# microservice-empaquetado

./: .coveragerc  .gitpod.yml  README.md  aeroalpes.Dockerfile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  sidecar-aeroalpes.yml
.github/workflows/: pull-request-actions.yml
connectors/pulsar/: debezium-mysql-source-config.yaml
src/eda/api/: __init__.py  ordenes.py
src/eda/config/: db.py
src/eda/modulos/ordenes/: consumidores.py  crear_orden.py  despachadores.py  main.py
src/eda/modulos/ordenes/aplicacion/comandos/: crear_orden.py
src/eda/modulos/sagas/aplicacion/coordinadores/: saga_ordenes.py
src/eda/pagos/: main.py
src/notificaciones/: main.py
src/ui/: main.py
src/ui/aeroalpes/: consumidor.py  publicador.py
src/ui/aeroalpes/vistas/: index.html
tests/unit/api/: test_api.py
